# usbrelay

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  config-nix-hidraw.sh  config-nix-libusb.sh  config-win-mingw.bat  config-win-msvc.bat  usbrelay.c
src/: usbrelay.c  usbrelay.h
windows/: .gitignore
windows/hidapi/: hidapi.lib
windows/usbrelay-vs/: stdafx.cpp  strsep.c  strsep.h  usbrelay-vs.sln  usbrelay-vs.vcxproj  usbrelay-vs.vcxproj.filters
